# NanoAgent

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: agent-runtime.md  architecture.md  data-design.md  operations.md  paddle-ocr.md  图片文字识别工具.md  技术栈学习路线.md  数据与存储设计.md  智能体检索增强与扩展工具设计.md  构建配置与运维.md  架构与模块设计.md  系统设计文档.md
scripts/: build-installer.ps1
src/: App.tsx  MarkdownMessage.tsx  api.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: agent_runner.rs  db.rs  error.rs  file_content.rs  lib.rs  llm.rs  main.rs  mcp.rs  models.rs  observability.rs  project_files.rs  rag.rs  runtime.rs  settings.rs  shell.rs  skills.rs  tool_policy.rs  web_search.rs
src/components/: AgentRuntimePanel.css  AgentRuntimePanel.tsx  ChatPane.css  ChatPane.tsx  ConfirmDialogHost.tsx  ImageAttachmentMessage.tsx  MarkdownMessage.tsx  NotificationToast.tsx  ObservabilityDetailPanel.css  ObservabilityDetailPanel.tsx  ObservabilityPanel.css  ObservabilityPanel.tsx  OpsPanel.css  OpsPanel.tsx  Sidebar.css  Sidebar.tsx  ToolResultMessage.tsx  WorkspaceGrid.css  WorkspaceGrid.tsx  observabilityFormatters.ts
src/hooks/: useChat.ts  useChatInput.ts  useConversations.ts  useEnv.ts  useMcp.ts  useMemory.ts  useModel.ts  useObservability.ts  useProjects.ts  useRagFiles.ts  useSkills.ts  useThemeMode.ts  useWorkspace.ts
src/lib/: agentSafe.ts  appHelpers.tsx  chatSystemMessage.ts  closeBehavior.ts  dialogs.ts  formatters.ts  imageAttachments.ts  skills.ts  (+3 more)
(+20 files in other folders)
