[package]
name = "nano-agent"
version = "0.1.0"
description = "A local productivity client for notes, search, and external LLMs."
authors = ["NanoAgent"]
edition = "2021"

[lib]
name = "nano_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["io-util", "process", "sync", "time"] }
thiserror = "1"
futures-util = "0.3"
